<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewCandidato"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/candidato"
        android:textAlignment="center"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/candidatos2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCandidato1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="410dp"
        android:layout_height="36dp"
        android:text="@string/main_txt1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/activity_result_resultado"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textViewCandidato1"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/candidato"
        android:textAlignment="center"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/candidatos1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewCandidato2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/candidato"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCandidato1"
        app:drawableStartCompat="@drawable/candidatos2" />

    <TextView
        android:id="@+id/textViewCandidato3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/candidato"
        android:textAlignment="center"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/candidatos3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCandidato2" />

    <ProgressBar
        android:id="@+id/progressBarCandidato1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="224dp"
        android:layout_height="24dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarCandidato2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="224dp"
        android:layout_height="24dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="20dp"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarCandidato3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="224dp"
        android:layout_height="24dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="20dp"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPorcentagemC1"
        android:layout_width="58dp"
        android:layout_height="0dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarCandidato1" />

    <TextView
        android:id="@+id/textViewPorcentagemC2"
        android:layout_width="58dp"
        android:layout_height="0dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarCandidato2" />

    <TextView
        android:id="@+id/textViewPorcentagemC3"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarCandidato3" />

</androidx.constraintlayout.widget.ConstraintLayout>